src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>C501_Additional_Languages__c</fullName>
        <description>CoreId</description>
        <label>Additional Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Age_Calculate__c</fullName>
        <description>Age Calculated is generated from the Birthdate field.</description>
        <formula>FLOOR (( TODAY() - Birthdate ) / 365.2425 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age Calculated is generated from the Birthdate field.</inlineHelpText>
        <label>Age Calculated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Age__c</fullName>
        <description>Age is the Age at the time of the most current service.</description>
        <inlineHelpText>Age is the Age at the time of the most current service.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_American_Indian_or_Alaska_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>American Indian or Alaska Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Asian__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>Asian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Black_or_African_American__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>Black or African American</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Case_Worker__c</fullName>
        <label>Case Worker</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Chronic_Health_Condition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>Chronic Health Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>Contact Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>C501_Currently_Attending_School__c</fullName>
        <description>Module4</description>
        <label>Currently Attending School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_U</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Developmental_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>Developmental Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Direct_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Direct Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Disability_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>Disability Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Disabling_Condition_Special_Needs__c</fullName>
        <description>Module4 - suggest populating via formula or process based on disability related checkboxes</description>
        <label>Disabling Condition / Special Needs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_U</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Disconnected_Youth__c</fullName>
        <description>Module4
Criteria: Age 14 – 24, Not attending school, Not employed; Perhaps set with formula/automation [TBD on automation - might need to get additional criteria based on LIHEAP; build as is for now]</description>
        <label>Disconnected Youth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_U</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Education_Level__c</fullName>
        <description>Module4</description>
        <label>Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grades 0-8</fullName>
                </value>
                <value>
                    <fullName>Grades 9-12/Non-Graduate</fullName>
                </value>
                <value>
                    <fullName>High School Graduate/Equivalency Diploma</fullName>
                </value>
                <value>
                    <fullName>12 Grade + Some Post-Secondary</fullName>
                </value>
                <value>
                    <fullName>2 or 4 years College Graduate</fullName>
                </value>
                <value>
                    <fullName>Graduate or other post-secondary school</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Employment_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Employment Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Ethnicity__c</fullName>
        <description>CoreId/Module4; For Module4, combine Unknown and Refused into Unknown.</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_FirstName_Initial__c</fullName>
        <label>FirstName Initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_HIV_AIDS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>HIV/AIDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Has_Social_Security_Number__c</fullName>
        <description>CoreId</description>
        <label>Has Social Security Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_U</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Health_Insurance__c</fullName>
        <description>Module4</description>
        <label>Health Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_U</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_IS_Birthdate_Searchable__c</fullName>
        <label>Birthdate Searchable</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Immigration_Status__c</fullName>
        <description>CoreId</description>
        <label>Immigration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immigrant/Refugee</fullName>
                </value>
                <value>
                    <fullName>Not Immigrant/Refugee</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Insurance_Unknown_Not_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Insurance Unknown/Not Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Is_In_Household__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is In Household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Medicaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Medicaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Medicare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Medicare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Mental_Health_Problem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>Mental Health Problem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Military_Health_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>Military Health Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Military_Status__c</fullName>
        <description>Module4</description>
        <label>Military Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Veteran</fullName>
                </value>
                <value>
                    <fullName>Active Military</fullName>
                </value>
                <value>
                    <fullName>No Military Service</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Native_Hawaiian_Pacific_Islander__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>Native Hawaiian / Pacific Islande</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Partial_Social_Security_Id__c</fullName>
        <label>Partial Social Security Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Physical_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>Physical Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Preferred_Language__c</fullName>
        <description>CoreId</description>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Race_Client_Doesn_t_Know__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>Client Doesn&apos;t Know</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Race_Client_Refused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>Client Refused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Race_Data_Not_Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>Data Not Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Race__c</fullName>
        <description>CoreId/Module4</description>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian/Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Bi/Multi-Racial</fullName>
                </value>
                <value>
                    <fullName>Black/African-American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian/Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Unspecified</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Service_Id__c</fullName>
        <externalId>true</externalId>
        <label>Service Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_State_Children_s_Health_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>State Children’s Health Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_State_Health_Insurance_for_Adults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Module4</description>
        <label>State Health Insurance for Adults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Substance_Abuse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Disabling Condition picklist</description>
        <label>Substance Abuse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Trigger_Ignore_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ignore the change in trigger</description>
        <label>Trigger Ignore Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_White__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CoreId/Module4 - will be used to select a value from the Race picklist</description>
        <label>White</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Work_Status__c</fullName>
        <description>Module4</description>
        <label>Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full-Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part-Time</fullName>
                </value>
                <value>
                    <fullName>Migrant Seasonal Farm Worker</fullName>
                </value>
                <value>
                    <fullName>Unemployed (Short-Term, 6 months or less)</fullName>
                </value>
                <value>
                    <fullName>Unemployed (Long-Term, more than 6 months)</fullName>
                </value>
                <value>
                    <fullName>Unemployed (Not in Labor Force)</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>CoreId/Module4; for Module4, combine T options into Other

This field is configured in NPSP Settings &gt; Relationships &gt; Relationships as the Gender field. Do not delete this field unless you remove the reference or select another Gender field there.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Transgender</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>